angelscript/AngelscriptParser.cpp

// Generated from ./AngelscriptParser.g4 by ANTLR 4.13.2


#include "AngelscriptParserVisitor.h"

#include "AngelscriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AngelscriptParserStaticData final {
  AngelscriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AngelscriptParserStaticData(const AngelscriptParserStaticData&) = delete;
  AngelscriptParserStaticData(AngelscriptParserStaticData&&) = delete;
  AngelscriptParserStaticData& operator=(const AngelscriptParserStaticData&) = delete;
  AngelscriptParserStaticData& operator=(AngelscriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag angelscriptparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<AngelscriptParserStaticData> angelscriptparserParserStaticData = nullptr;

void angelscriptparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (angelscriptparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(angelscriptparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AngelscriptParserStaticData>(
    std::vector<std::string>{
      "script", "moduleImport", "asGeneric", "simpleTypeSpecifierList", 
      "booleanLiteral", "primaryExpression", "idExpression", "unqualifiedId", 
      "qualifiedId", "nestedNameSpecifier", "lambdaExpression", "lambdaIntroducer", 
      "lambdaCapture", "captureDefault", "captureList", "capture", "simpleCapture", 
      "initcapture", "lambdaDeclarator", "postfixExpression", "expressionList", 
      "pseudoDestructorName", "unaryExpression", "unaryOperator", "newPlacement", 
      "newInitializer_", "castExpression", "multiplicativeExpression", "additiveExpression", 
      "shiftExpression", "shiftOperator", "relationalExpression", "equalityExpression", 
      "andExpression", "exclusiveOrExpression", "inclusiveOrExpression", 
      "logicalAndExpression", "logicalOrExpression", "conditionalExpression", 
      "assignmentExpression", "assignmentOperator", "expression", "constantExpression", 
      "statement", "labeledStatement", "expressionStatement", "compoundStatement", 
      "statementSeq", "selectionStatement", "condition", "iterationStatement", 
      "forInitStatement", "forRangeDeclaration", "forRangeInitializer", 
      "jumpStatement", "declarationStatement", "declarationseq", "declaration", 
      "blockDeclaration", "aliasDeclaration", "simpleDeclaration", "emptyDeclaration_", 
      "declSpecifier", "declSpecifierSeq", "functionSpecifier", "typedefName", 
      "typeSpecifier", "trailingTypeSpecifier", "typeSpecifierSeq", "trailingTypeSpecifierSeq", 
      "simpleTypeSpecifier", "assertSpecifier", "theTypeName", "decltypeSpecifier", 
      "elaboratedTypeSpecifier", "enumName", "enumSpecifier", "enumHead", 
      "opaqueEnumDeclaration", "enumkey", "enumbase", "enumeratorList", 
      "enumeratorDefinition", "enumerator", "namespaceName", "originalNamespaceName", 
      "namespaceDefinition", "namespaceAlias", "namespaceAliasDefinition", 
      "qualifiednamespacespecifier", "balancedTokenSeq", "balancedtoken", 
      "initDeclaratorList", "initDeclarator", "declarator", "declaratorDef", 
      "parametersAndQualifiers", "refqualifier", "declaratorid", "theTypeId", 
      "parameterDeclarationClause", "parameterDeclarationList", "parameterDeclaration", 
      "functionDefinition", "functionBody", "initializer", "braceOrEqualInitializer", 
      "initializerClause", "initializerList", "bracedInitList", "className", 
      "classSpecifier", "classHead", "classHeadName", "classVirtSpecifier", 
      "memberSpecification", "memberdeclaration", "propertyDefinition", 
      "memberDeclaratorList", "memberDeclarator", "postFuncSpecifierSeq", 
      "virtualSpecifier", "baseClause", "baseSpecifierList", "baseSpecifier", 
      "classOrDeclType", "baseTypeSpecifier", "accessSpecifier", "operatorFunctionId", 
      "literalOperatorId", "theOperator", "literal"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "'cast'", "'import'", "'from'", "'out'", "'property'", 
      "'ensure'", "'ensureAlways'", "'check'", "'mixin'", "'int'", "'int8'", 
      "'int16'", "'int32'", "'int64'", "'uint'", "'uint8'", "'uint16'", 
      "'uint32'", "'uint64'", "'float'", "'double'", "'bool'", "'auto'", 
      "'break'", "'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", 
      "'default'", "'do'", "'else'", "'enum'", "'export'", "'false'", "'final'", 
      "'for'", "'goto'", "'if'", "'namespace'", "'nullptr'", "'operator'", 
      "'override'", "'private'", "'protected'", "'public'", "'return'", 
      "'short'", "'switch'", "'this'", "'true'", "'virtual'", "'void'", 
      "'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "", "'&'", "'|'", "'~'", "'!'", "'='", "'<'", 
      "'>'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'&='", "'|='", 
      "'<<='", "'>>='", "'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", 
      "'++'", "'--'", "','", "'\\u003F'", "':'", "'::'", "';'", "'.'"
    },
    std::vector<std::string>{
      "", "IntegerLiteral", "CharacterLiteral", "FloatingLiteral", "StringLiteral", 
      "UserDefinedLiteral", "Cast", "Import", "From", "Out", "Property", 
      "Ensure", "EnsureAlways", "Check", "Mixin", "Int", "Int8", "Int16", 
      "Int32", "Int64", "UInt", "UInt8", "UInt16", "UInt32", "UInt64", "Float", 
      "Double", "Bool", "Auto", "Break", "Case", "Catch", "Char", "Class", 
      "Const", "Continue", "Default", "Do", "Else", "Enum", "Export", "False_", 
      "Final", "For", "Goto", "If", "Namespace", "Nullptr", "Operator", 
      "Override", "Private", "Protected", "Public", "Return", "Short", "Switch", 
      "This", "True_", "Virtual", "Void", "While", "LeftParen", "RightParen", 
      "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Plus", 
      "Minus", "Star", "Div", "Mod", "Xor", "And", "Or", "Tilde", "Not", 
      "Assign", "Less", "Greater", "PlusAssign", "MinusAssign", "StarAssign", 
      "DivAssign", "ModAssign", "XorAssign", "AndAssign", "OrAssign", "LeftShiftAssign", 
      "RightShiftAssign", "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
      "AndAnd", "OrOr", "PlusPlus", "MinusMinus", "Comma", "Question", "Colon", 
      "Doublecolon", "Semi", "Dot", "Identifier", "DecimalLiteral", "OctalLiteral", 
      "HexadecimalLiteral", "BinaryLiteral", "Integersuffix", "UserDefinedIntegerLiteral", 
      "UserDefinedFloatingLiteral", "UserDefinedStringLiteral", "UserDefinedCharacterLiteral", 
      "Whitespace", "Newline", "BlockComment", "LineComment", "PreprocessorBranchRemoval", 
      "Preprocessor"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  angelscriptparserParserStaticData = std::move(staticData);
}

}

AngelscriptParser::AngelscriptParser(TokenStream *input) : AngelscriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AngelscriptParser::AngelscriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AngelscriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *angelscriptparserParserStaticData->atn, angelscriptparserParserStaticData->decisionToDFA, angelscriptparserParserStaticData->sharedContextCache, options);
}

AngelscriptParser::~AngelscriptParser() {
  delete _interpreter;
}

const atn::ATN& AngelscriptParser::getATN() const {
  return *angelscriptparserParserStaticData->atn;
}

std::string AngelscriptParser::getGrammarFileName() const {
  return "AngelscriptParser.g4";
}

const std::vector<std::string>& AngelscriptParser::getRuleNames() const {
  return angelscriptparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& AngelscriptParser::getVocabulary() const {
  return angelscriptparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AngelscriptParser::getSerializedATN() const {
  return angelscriptparserParserStaticData->serializedATN;
}


//----------------- ScriptContext ------------------------------------------------------------------

AngelscriptParser::ScriptContext::ScriptContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AngelscriptParser::ScriptContext::EOF() {
  return getToken(AngelscriptParser::EOF, 0);
}

AngelscriptParser::DeclarationseqContext* AngelscriptParser::ScriptContext::declarationseq() {
  return getRuleContext<AngelscriptParser::DeclarationseqContext>(0);
}


size_t AngelscriptParser::ScriptContext::getRuleIndex() const {
  return AngelscriptParser::RuleScript;
}


std::any AngelscriptParser::ScriptContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptParserVisitor*>(visitor))
    return parserVisitor->visitScript(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptParser::ScriptContext* AngelscriptParser::script() {
  ScriptContext *_localctx = _tracker.createInstance<ScriptContext>(_ctx, getState());
  enterRule(_localctx, 0, AngelscriptParser::RuleScript);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(265);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -5828288461429277954) != 0) || ((((_la - 67) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 67)) & 190589174727) != 0)) {
      setState(264);
      declarationseq();
    }
    setState(267);
    match(AngelscriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleImportContext ------------------------------------------------------------------

AngelscriptParser::ModuleImportContext::ModuleImportContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::Import() {
  return getToken(AngelscriptParser::Import, 0);
}

std::vector<tree::TerminalNode *> AngelscriptParser::ModuleImportContext::Identifier() {
  return getTokens(AngelscriptParser::Identifier);
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::Identifier(size_t i) {
  return getToken(AngelscriptParser::Identifier, i);
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::Semi() {
  return getToken(AngelscriptParser::Semi, 0);
}

std::vector<tree::TerminalNode *> AngelscriptParser::ModuleImportContext::Dot() {
  return getTokens(AngelscriptParser::Dot);
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::Dot(size_t i) {
  return getToken(AngelscriptParser::Dot, i);
}

AngelscriptParser::DeclaratorContext* AngelscriptParser::ModuleImportContext::declarator() {
  return getRuleContext<AngelscriptParser::DeclaratorContext>(0);
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::From() {
  return getToken(AngelscriptParser::From, 0);
}

tree::TerminalNode* AngelscriptParser::ModuleImportContext::StringLiteral() {
  return getToken(AngelscriptParser::StringLiteral, 0);
}

AngelscriptParser::DeclSpecifierSeqContext* AngelscriptParser::ModuleImportContext::declSpecifierSeq() {
  return getRuleContext<AngelscriptParser::DeclSpecifierSeqContext>(0);
}

AngelscriptParser::PostFuncSpecifierSeqContext* AngelscriptParser::ModuleImportContext::postFuncSpecifierSeq() {
  return getRuleContext<AngelscriptParser::PostFuncSpecifierSeqContext>(0);
}


size_t AngelscriptParser::ModuleImportContext::getRuleIndex() const {
  return AngelscriptParser::RuleModuleImport;
}


std::any AngelscriptParser::ModuleImportContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptParserVisitor*>(visitor))
    return parserVisitor->visitModuleImport(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptParser::ModuleImportContext* AngelscriptParser::moduleImport() {
  ModuleImportContext *_localctx = _tracker.createInstance<ModuleImportContext>(_ctx, getState());
  enterRule(_localctx, 2, AngelscriptParser::RuleModuleImport);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(291);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(269);
      match(AngelscriptParser::Import);
      setState(270);
      match(AngelscriptParser::Identifier);
      setState(275);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == AngelscriptParser::Dot) {
        setState(271);
        match(AngelscriptParser::Dot);
        setState(272);
        match(AngelscriptParser::Identifier);
        setState(277);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(278);
      match(AngelscriptParser::Semi);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(279);
      match(AngelscriptParser::Import);
      setState(281);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(280);
        declSpecifierSeq();
        break;
      }

      default:
        break;
      }
      setState(283);
      declarator();
      setState(285);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 567347999933440) != 0)) {
        setState(284);
        postFuncSpecifierSeq();
      }
      setState(287);
      match(AngelscriptParser::From);
      setState(288);
      match(AngelscriptParser::StringLiteral);
      setState(289);
      match(AngelscriptParser::Semi);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AsGenericContext ------------------------------------------------------------------

AngelscriptParser::AsGenericContext::AsGenericContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AngelscriptParser::AsGenericContext::Identifier() {
  return getToken(AngelscriptParser::Identifier, 0);
}

tree::TerminalNode* AngelscriptParser::AsGenericContext::Less() {
  return getToken(AngelscriptParser::Less, 0);
}

AngelscriptParser::SimpleTypeSpecifierListContext* AngelscriptParser::AsGenericContext::simpleTypeSpecifierList() {
  return getRuleContext<AngelscriptParser::SimpleTypeSpecifierListContext>(0);
}

tree::TerminalNode* AngelscriptParser::AsGenericContext::Greater() {
  return getToken(AngelscriptParser::Greater, 0);
}


size_t AngelscriptParser::AsGenericContext::getRuleIndex() const {
  return AngelscriptParser::RuleAsGeneric;
}


std::any AngelscriptParser::AsGenericContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptParserVisitor*>(visitor))
    return parserVisitor->visitAsGeneric(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptParser::AsGenericContext* AngelscriptParser::asGeneric() {
  AsGenericContext *_localctx = _tracker.createInstance<AsGenericContext>(_ctx, getState());
  enterRule(_localctx, 4, AngelscriptParser::RuleAsGeneric);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(293);
    match(AngelscriptParser::Identifier);
    setState(294);
    match(AngelscriptParser::Less);
    setState(295);
    simpleTypeSpecifierList();
    setState(296);
    match(AngelscriptParser::Greater);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleTypeSpecifierListContext ------------------------------------------------------------------

AngelscriptParser::SimpleTypeSpecifierListContext::SimpleTypeSpecifierListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}
